--- a/src/estilo.css
+++ b/src/estilo.css
@@ -58,7 +58,7 @@
     color: rgb(0, 122, 74);
     display: block;
     font-size: 0.76em;
-    height: 50px;
+    height: 40px;
     letter-spacing: 1px;
     margin: 0 15px;
     padding: 0 4px;
@@ -89,10 +89,23 @@
     margin-right: 1%;
     text-align: center;
   }
+  .itemcart {
+    width: 100%;
+    border-bottom: 1px solid #fff;
+    float: left;
+    padding: 15px 10px;
+  }
   .img {
     max-width: 100%;
     height: auto;
     border-radius: .4rem;
+  }
+  .imgcart {
+    max-width: 150px;
+    float: left;
+    height: auto;
+    border-radius: 1.5rem;
+    margin-right: 20px;
   }
   .badge {
     display: inline-block;
